added the initial files

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,9 @@
 .hero-gradient {
   background: linear-gradient(
     97.86deg,
-    #a509ff 0%,
-    #34acc7 53.65%,
-    #a134c7 100%
+    #ff61a6 0%,
+    #ff77b3 53.65%,
+    #d4a5d9 100%
   );
 }
 
